First draft for API endpoint for /tag/metadata/v1
